[package]
name = "grin-foreign-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-jsonrpc-mw = "0.5.4"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.20.1", features = ["full"] }
grin_api = { git = "https://github.com/flomang/grin.git" } 
